fix: link color in callout dark (#118)
* feat: title in header could be hidden by settings panel and in that case loggo has width auto

* fix: color fixed for blockquote dark text callout

--- a/src/theme/io-sanita/_main.scss
+++ b/src/theme/io-sanita/_main.scss
@@ -322,3 +322,10 @@ body.page-not-found {
     }
   }
 }
+
+.blockquote-card.dark a {
+  &,
+  &:hover {
+    color: $primary-text;
+  }
+}
